restructuring the code to be clean and covering some issues

--- a/Calculator.css
+++ b/Calculator.css
@@ -44,3 +44,7 @@ button:active{
     transform: scale(0.95);
 }
 /* if input field => pointer-event: none; */
+
+.operator{
+    color: rgb(97, 97, 201);
+}
